addin some code to pull down the example data she uses in the demo

--- a/finetuning/02_Where_finetuning_fits_in_lab_student.ipynb
+++ b/finetuning/02_Where_finetuning_fits_in_lab_student.ipynb
@@ -93,7 +93,43 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "filename = \"lamini_docs.jsonl\"\n",
+    "# URL of the instruction dataset to be downloaded\n",
+    "url = \"https://huggingface.co/datasets/kotzeje/lamini_docs.jsonl\"\n",
+    "\n",
+    "# Local path where the file will be saved\n",
+    "file_path = \"./docs/lamini_docs.jsonl\"\n",
+    "\n",
+    "import os\n",
+    "import requests\n",
+    "\n",
+    "# Check if the file already exists locally\n",
+    "if os.path.exists(file_path):\n",
+    "  print(f\"The file {file_path} already exists locally.\")\n",
+    "else:\n",
+    "  # Download the file\n",
+    "  try:\n",
+    "    response = requests.get(url)\n",
+    "    # Check if the download was successful\n",
+    "    if response.status_code == 200:\n",
+    "      with open(file_path, 'wb') as file:\n",
+    "        file.write(response.content)\n",
+    "        print(f\"File downloaded successfully and saved as {file_path}.\")\n",
+    "    else:\n",
+    "      print(f\"Failed to download the file. Status code: {response.status_code}\")\n",
+    "  except Exception as e:\n",
+    "    print(f\"An error occurred during downloading: {e}\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e83fc5973c37fbd3"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "filename = \"./docs/lamini_docs.jsonl\"\n",
     "instruction_dataset_df = pd.read_json(filename, lines=True)\n",
     "instruction_dataset_df"
    ],
